<?xml version="1.0" encoding="utf-8"?>
<com.example.samprojre.apptheme.custom_views.NewsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:clipToPadding="false"
    android:background="@drawable/bottom_sheet_dialog_fragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="20dp"
        android:duplicateParentState="true"
        android:paddingTop="20dp"
        android:paddingBottom="12dp"
        android:text="@string/settings"
        android:textColor="@color/colorTextTitle"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/preferencesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_settings_options"
        android:clipToPadding="false"
        android:padding="16dp"
        android:elevation="6dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:duplicateParentState="true"
            android:src="@drawable/ic_preferences_2nd"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:duplicateParentState="true"
            android:text="@string/preferences"
            android:textColor="@color/colorTextTitle"
            android:textStyle="bold" />
    </LinearLayout>
    <!--    android:textColor="@color/colorTextTitle"-->

    <LinearLayout
        android:id="@+id/themesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_settings_options"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:elevation="6dp"
        android:layout_marginTop="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:duplicateParentState="true"
            android:src="@drawable/ic_theme"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="4dp"
            android:drawablePadding="20dp"
            android:duplicateParentState="true"
            android:text="@string/themes"
            android:textColor="@color/colorTextTitle"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_settings_options"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:duplicateParentState="true"
            android:src="@drawable/ic_info_outline_black_24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:duplicateParentState="true"
            android:text="@string/about"
            android:textColor="@color/colorTextTitle"
            android:textStyle="bold" />

    </LinearLayout>


</com.example.samprojre.apptheme.custom_views.NewsLinearLayout>

